# prompt-engineering-proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue
frontend/src/components/common/: StatusBadge.vue  TimingDisplay.vue
frontend/src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue
frontend/src/components/requests/: RequestBody.vue  RequestDetail.vue  RequestFilters.vue  RequestHeaders.vue  RequestList.vue  RequestListItem.vue  StreamingView.vue
frontend/src/composables/: useSSE.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ComparisonPage.vue  DashboardPage.vue  EditorPage.vue  RequestDetailPage.vue  SettingsPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: requests.ts  servers.ts
src/prompt_engineering_proxy/: app.py  config.py  dev_proxy.py  main.py  settings.py
src/prompt_engineering_proxy/api/: events.py  models.py  requests.py  router.py  send.py  servers.py
src/prompt_engineering_proxy/proxy/: handler.py  router.py  streaming.py
src/prompt_engineering_proxy/realtime/: events.py  publisher.py  subscriber.py
src/prompt_engineering_proxy/storage/: database.py  models.py  repository.py  services.py
src/prompt_engineering_proxy/tests/: test_one.py
tests/: conftest.py  test_health.py  test_proxy.py  test_storage.py
(+10 files in other folders)
